Prettier next.js demo

--- a/examples/next.js/package.json
+++ b/examples/next.js/package.json
@@ -15,6 +15,7 @@
     "next": "^7.0.2",
     "node-hot-reloader": "^1.0.0",
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "styled-jsx": "^3.1.1"
   }
 }
