--- a/examples/next.js/shrinkwrap.yaml
+++ b/examples/next.js/shrinkwrap.yaml
@@ -1,6 +1,6 @@
 dependencies:
   '@babel/runtime': 7.1.5
-  node-hot-reloader: 'link:../../packages/node-hot-reloader'
+  hot-module: 'link:../../packages/hot-module'
   styled-jsx: 3.1.1
 packages:
   /@babel/runtime/7.1.5:
@@ -130,8 +130,8 @@ shrinkwrapVersion: 3
 specifiers:
   '@babel/runtime': ^7.1.5
   express: ^4.16.4
+  hot-module: ^1.0.0
   next: ^7.0.2
-  node-hot-reloader: ^1.0.0
   react: ^16.6.1
   react-dom: ^16.6.1
   styled-jsx: ^3.1.1
