--- a/packages/hot-module/package.json
+++ b/packages/hot-module/package.json
@@ -1,7 +1,8 @@
 {
   "name": "hot-module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "src/index.js",
+  "repository": "https://github.com/ericclemmons/hot-module",
   "scripts": {
     "release": "np --yolo"
   },
